--- a/MFAAvalonia/Assets/Localization/Strings.resx
+++ b/MFAAvalonia/Assets/Localization/Strings.resx
@@ -1196,11 +1196,11 @@
         <value>因 Mirror 酱无法指定特定版本进行更新，请到更新设置中把更新源切换为 GitHub。</value>
     </data>
     <data name="AlreadyRunningTitle" xml:space="preserve">
-        <value>MAA 单实例检测</value>
+        <value>MFAAvalonia</value>
     </data>
     <data name="AlreadyRunningMessage" xml:space="preserve">
         <value>同一路径下只能启动一个实例!
 
-如需多开 MAA，请复制一份新的 MAA 到其他文件夹下，并设置使用不同的 MAA、相同的 adb 和不同的模拟器地址进行多开操作。</value>
+如需多开，请复制一份新的到其他文件夹下，并设置使用不同的实例、相同的 adb 和不同的模拟器地址进行多开操作。</value>
     </data>
 </root>
